--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,18 @@
     background: grey;
     border-radius: 5px;
 }
+
+#logout-button {
+    width: 6em;
+    border: 2px solid black;
+    background: grey;
+    border-radius: 5px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 26px;
+}
+
 a {
     display: block;
     width: 100%;
@@ -38,7 +50,7 @@ svg {
 #profile-picture img{
 	position: absolute;
 	top: 0px;
-	right: 10px;
+	right: 120px;
 	height: 25px;
 }
 
