--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ a {
     text-decoration: none;
     border-radius: 5px;
     color: white;
+    font-family: Arial;
 }
 a:hover {
     color: white;
@@ -97,7 +98,7 @@ h2 {
   padding: 0;
   font-weight: bold;
   color: #222;
-  font-family: Poppins;
+  
   font-size: 36px; }
 
 .main {
@@ -113,7 +114,7 @@ body {
   color: #222;
   background: #f8f8f8;
   font-weight: 400;
-  font-family: Poppins; }
+  font-family: Arial; }
 
 .container {
   width: 900px;
@@ -172,7 +173,8 @@ body {
 
 .signup-form, .signup-image, .signin-form, .signin-image {
   width: 50%;
-  overflow: hidden; }
+  overflow: hidden; 
+  font-family: Arial;}
 
 .signup-image {
   margin: 0 55px; }
@@ -200,7 +202,10 @@ figure {
   -o-border-radius: 5px;
   -ms-border-radius: 5px;
   margin-top: 25px;
-  cursor: pointer; }
+  cursor: pointer; 
+  font-family: Arial;
+  }
+
   .form-submit:hover {
     background: #4292dc; }
 
@@ -220,10 +225,12 @@ figure {
 .signup-form {
   margin-left: 75px;
   margin-right: 75px;
-  padding-left: 34px; }
+  padding-left: 34px; 
+}
 
 .register-form {
-  width: 100%; }
+  width: 100%; 
+}
 
 .form-group {
   position: relative;
@@ -238,7 +245,7 @@ input {
   border: none;
   border-bottom: 1px solid #999;
   padding: 6px 30px;
-  font-family: Poppins;
+  font-family: Arial;
   box-sizing: border-box; }
   input::-webkit-input-placeholder {
     color: #999; }
