--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 
 .head-bar {
   height: 50px;
+  width: 100%;
   background-color: #d4c9ff;
+  position: relative;
+  margin-top: -10px;
+  margin-left: -10px;
 }
 #reg-button {
     width: 6em;
@@ -107,7 +111,9 @@ h2 {
 
 .main {
   background: #f8f8f8;
-  padding: 150px 0; }
+  padding: 150px 0; 
+  margin-top: -100px;
+}
 
 .clear {
   clear: both; }
@@ -118,7 +124,8 @@ body {
   color: #222;
   background: #f8f8f8;
   font-weight: 400;
-  font-family: Arial; }
+  font-family: Arial; 
+}
 
 .container {
   width: 900px;
