Updates to head-bar
Changed the color, sizing, and positioning of the head-bar

--- a/css/index.css
+++ b/css/index.css
@@ -55,8 +55,11 @@ svg {
 }
 
 .head-bar {
-	height: 26px;
-	background-color: #d4c9ff;
+  height: 50px;
+  width: 100%;
+  background-color: #CDC9C9;
+  position: relative;
+
 }
 
 #profile-picture {
