--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,8 @@
 .head-bar {
   height: 50px;
   width: 100%;
-  background-color: #d4c9ff;
+  background-color: #CDC9C9;
   position: relative;
-  margin-top: -10px;
-  margin-left: -10px;
 }
 #reg-button {
     width: 6em;
