--- a/css/profile.css
+++ b/css/profile.css
@@ -23,5 +23,8 @@
 	position: absolute;
 	top: 0px;
 	right: 10px;
-	height: 25px;
+	height: 50px;
+	background-color: #d4c9ff;
+	border-radius: 10px;
+	border: 2px solid black;
 }
