--- a/css/index.css
+++ b/css/index.css
@@ -119,11 +119,9 @@ nav #signup a {
   display: inline-block;
   *display: inline;
   *zoom: 1;
-  height: 40px;
-  margin-top: 10px;
   line-height: 25px;
   font-weight: bold;
-  padding: 0 8px;
+  padding: 5px 5px 5px 5px;
   text-decoration: none;
   color: #444;
   text-shadow: 0 1px 0 #fff; 
@@ -154,7 +152,6 @@ nav #login-content {
   padding: 15px;
   box-shadow: 0 2px 2px -1px rgba(0,0,0,.9);
   border-radius: 3px 0 3px 3px;
-  margin-top: 10px;
 }
 
 nav li #login-content {
