--- a/css/index.css
+++ b/css/index.css
@@ -207,17 +207,26 @@ nav li #login-content {
 }
 
 #profile-pic img{
-  height: 20%;
-  width: 20%;
+  position: relative;
+  height: 300px;
+  width: 300px;
   border: 2px solid lightgrey;
   padding-bottom: 1px;
+  margin-left: 250px;
+  margin-top: 30px;
 }
 
-#graph img{
-  height: 70%;
-  width: 70%;
-  border: 2px solid lightgrey;
-  margin-left: 200px;
+#articles{
+  position: relative;
+  margin-left: 100px;
+  margin-top: 30px;
+}
+
+#graph{
+  height:800px;
+  width: 800px;
+  margin-left: 250px;
+  margin-top: 50px;
 }
 
 #home img{
