--- a/css/index.css
+++ b/css/index.css
@@ -212,22 +212,32 @@ nav li #login-content {
   width: 300px;
   border: 2px solid lightgrey;
   padding-bottom: 1px;
-  margin-left: 300px;
-  margin-top: 30px;
+  margin-left: 65%;
+  margin-top: 10%;
 }
 
 #articles{
   position: relative;
-  margin-left: 100px;
-  margin-top: 30px;
+  margin-left: 30%;
+  margin-top: 10%;
   text-align: center;
+}
+
+#graphTitle{
+  text-align: center;
+}
+
+#notice{
+  text-align: center;
+  color: gray;
+  font-size: 10px;
 }
 
 #graph{
   height:800px;
   width: 800px;
-  margin-left: 250px;
-  margin-top: 50px;
+  margin-left: 20%;
+  margin-top: 5%;
 }
 
 #home img{
